--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,7 @@
 	<classpathentry kind="lib" path="C:/Users/bmcdonald/Desktop/libs/okio-1.13.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/bmcdonald/Desktop/client-combined-3.12.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/bmcdonald/Desktop/client-combined-3.12.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/apache-log4j-2.11.0-bin/apache-log4j-2.11.0-bin/log4j-api-2.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/apache-log4j-2.11.0-bin/apache-log4j-2.11.0-bin/log4j-core-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
