--- a/.classpath
+++ b/.classpath
@@ -4,17 +4,17 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/client-combined-3.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/client-combined-3.12.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/byte-buddy-1.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/gson-2.8.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/guava-23.6-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/okhttp-3.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Brandon Mc/Downloads/libs/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/client-combined-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/client-combined-3.12.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/byte-buddy-1.8.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/guava-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/okhttp-3.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmcdonald/Downloads/selenium-java-3.12.0/libs/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
